Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134209

Deadlock on NVidia GPU or Vulkan rendeirng

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.9.0 RC, 6.10.0 FF
    • 6.9.0 Beta2
    • WebEngine
    • None
    • Linux/X11
    • 31151b113 (dev), 6920fb19b (6.9)

      After a while expecially with complicated website or with multiple windows open, the application might freeze, or after the deadlock fix in 6.9 the rendering of one window will freeze.

        For Gerrit Dashboard: QTBUG-134209
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            allan.jensen Allan Sandfeld Jensen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes