Fix deadlock fix

Avoid frozen rendering using a read/write lock which doesnt block the
two threads each only needing a read lock.

Fixes: QTBUG-134209
Change-Id: I0e73f8ba1b4236c4b280d9b6c28b7fed0c45aaa7
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
(cherry picked from commit 31151b113ff5a9706a426e6484c534b55202402a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>